--- a/index.html
+++ b/index.html
@@ -8,32 +8,38 @@
 </head>
 <body>
     <div class="container" id="scene0">
-        <button id="nextSceneButton" class="begin-button">Begin Mini Escape</button>
+        <img id="logo" src="logo.svg" alt="">
+        <button id="nextSceneButton" class="begin-button">Begin</button>
     </div>
     <div class="container" id="scene1">
-        <video width="950" height="650" id="customVideo" autoplay controls>
-            <source src="intro.mp4" type="video/mp4">
+        <video width="950" height="650" id="customVideo" controls>
+            <source src="introvideo.mp4" type="video/mp4">
         </video>
         <!-- <button id="playBtn" class="bigBtn"><span>&#9658;</span></button>
         <button id="pauseBtn" class="bigBtn"><span>&#10074;&#10074;</span></button> -->
     </div>
     <div class="container" id="scene2">
-        <p id="countdown">4:00</p>
-        <button id="startPauseButton">Start</button>
-        <div class="input-container">
-            <input type="text" id="wordInput" placeholder="Typ een woord" autocomplete="off">
-            <button id="confirmButton">Check</button>
+        <div class="pijltje">
+            <img src="tekst.svg" alt="">
         </div>
-        <div id="popup" class="popup">Niet het goede antwoord!</div>
+        <div id="containerscene2">
+            <p id="countdown">4:00</p>
+            <button id="startPauseButton">Start</button>
+            <div class="input-container">
+                <input type="text" id="wordInput" placeholder="Typ een woord" autocomplete="off">
+                <button id="confirmButton">Check</button>
+            </div>
+            <div id="popup" class="popup">Niet het goede antwoord!</div>
+        </div>
     </div>
     <div class="container" id="scene3">
-        <video width="950" height="650" id="customVideo2" autoplay controls >
-            <source src="einde.mp4" type="video/mp4">
+        <video width="950" height="650" id="customVideo2" controls >
+            <source src="outrocode.mp4" type="video/mp4">
         </video>
     </div>
-    <div class="container" id="scene4">
+    <!-- <div class="container" id="scene4">
         <h1>Bedankt voor het spelen van de escape room!</h1>
-    </div>
+    </div> -->
     <script src="js/script.js"></script>
 </body>
 </html>
